margin top to fix logo alignment

--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,12 @@ nav{
     flex-direction: column;
 }
 
+.about-me__info
+{
+    display: flex;
+    flex-direction:column;
+}
+
 .about-me_info--container
 {
     display: flex;
@@ -151,4 +157,13 @@ nav{
  color: #242424;
  text-decoration: none;
  padding: 0 16px;
+}
+
+.about-me__img--container
+{
+    margin-top: 200px;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
